# Python-flask

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  template.env
src/: alembic.ini  main.py  settings.py  swagger.yml
src/alembic/: env.py
src/alembic/versions/: 8058ef035dc6_tables_related_with_creating_cv_and_.py
src/db/: create_db.py
src/db/models/: __init__.py  cv_model.py  user_model.py
src/db/repositories/: __init__.py  create_cv_repository.py  register_user_repository.py
src/db/repositories/models/cv/: cv_model_base.py  cv_model_input.py  cv_model_output.py
src/db/repositories/models/user/: user_model_base.py  user_model_input.py  user_model_output.py
src/exceptions/: db_exceptions.py
src/helpers/: error_msg_formater.py
src/logic/: cv.py  registration.py
src/models/create_cv/: create_cv_base.py  create_cv_request.py  create_cv_response.py
src/models/register_user/: register_user_base.py  register_user_request.py  register_user_response.py
src/views/: admin.py  candidate.py  health.py  hr.py  login_and_registration.py
tests/: __init__.py  conftest.py  test_add_cv.py  test_admin.py  test_cv.py  test_health.py  test_hr.py  test_login.py  test_registration.py
tests/assets/: cv.py  fake_cv.py  fake_user.py  requests_validatiion_constants.py
